--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -93,9 +93,15 @@ jobs:
           ccache --max-size 1G
           ccache -z
       - name: Build Externals
-        run: ./make_externals.sh -G "Unix Makefiles" -DCMAKE_CXX_COMPILER_LAUNCHER=ccache -DCMAKE_C_COMPILER_LAUNCHER=ccache
+        run: >
+          ./make_externals.sh -G "Unix Makefiles" 
+                              -DCMAKE_CXX_COMPILER_LAUNCHER=ccache 
+                              -DCMAKE_C_COMPILER_LAUNCHER=ccache
       - name: Build CosmoScout VR
-        run: ./make.sh -G "Unix Makefiles" -DCMAKE_CXX_COMPILER_LAUNCHER=ccache -DCMAKE_C_COMPILER_LAUNCHER=ccache -DCOSMOSCOUT_COVERAGE_INFO=On -DCOSMOSCOUT_UNIT_TESTS=On
+        run: >
+          ./make.sh -G "Unix Makefiles" 
+                    -DCMAKE_CXX_COMPILER_LAUNCHER=ccache -DCMAKE_C_COMPILER_LAUNCHER=ccache 
+                    -DCOSMOSCOUT_COVERAGE_INFO=On -DCOSMOSCOUT_UNIT_TESTS=On
       - name: Run Tests
         run: ./install/linux-release/bin/run_tests.sh
       - name: Run Graphical Tests
@@ -145,9 +151,15 @@ jobs:
           ccache --max-size 1G
           ccache -z
       - name: Build Externals
-        run: ./make_externals.sh -G "Unix Makefiles" -DCMAKE_CXX_COMPILER_LAUNCHER=ccache -DCMAKE_C_COMPILER_LAUNCHER=ccache
+        run: >
+          ./make_externals.sh -G "Unix Makefiles" 
+                              -DCMAKE_CXX_COMPILER_LAUNCHER=ccache 
+                              -DCMAKE_C_COMPILER_LAUNCHER=ccache
       - name: Build CosmoScout VR
-        run: ./make.sh -G "Unix Makefiles" -DCMAKE_CXX_COMPILER_LAUNCHER=ccache -DCMAKE_C_COMPILER_LAUNCHER=ccache -DCOSMOSCOUT_UNIT_TESTS=On
+        run: >
+          ./make.sh -G "Unix Makefiles" 
+                    -DCMAKE_CXX_COMPILER_LAUNCHER=ccache -DCMAKE_C_COMPILER_LAUNCHER=ccache 
+                    -DCOSMOSCOUT_UNIT_TESTS=On
       - name: Run Tests
         run: ./install/linux-release/bin/run_tests.sh
       - name: Run Graphical Tests
@@ -169,7 +181,17 @@ jobs:
       contains(github.event.head_commit.message, '[run-ci]')
     env:
       BOOST_ROOT: C:/hostedtoolcache/windows/Boost/1.72.0
+      FOOOO1: $BOOST_ROOT_1_72_0
+      FOOOO2: ${{ $BOOST_ROOT_1_72_0 }}
+      FOOOO3: $env:BOOST_ROOT_1_72_0
     steps:
+      - name: Echo
+        run: |
+          echo $env:BOOST_ROOT
+          echo $env:FOOOO1
+          echo $env:FOOOO2
+          echo $env:FOOOO3
+          echo $env:BOOST_ROOT_1_72_0
       - name: Checkout Repository
         uses: actions/checkout@v2
       - name: Checkout Submodules
@@ -187,10 +209,15 @@ jobs:
           clcache -z
       - name: Build Externals
         shell: cmd
-        run: make_externals.bat -G "Visual Studio 16 2019" -A x64 -DCMAKE_VS_GLOBALS="CLToolExe=clcache.exe;TrackFileAccess=false"
+        run: >
+          make_externals.bat -G "Visual Studio 16 2019" -A x64 
+                             -DCMAKE_VS_GLOBALS="CLToolExe=clcache.exe;TrackFileAccess=false"
       - name: Build CosmoScout VR
         shell: cmd
-        run: make.bat -G "Visual Studio 16 2019" -A x64 -DCMAKE_VS_GLOBALS="CLToolExe=clcache.exe;TrackFileAccess=false" -DCOSMOSCOUT_UNIT_TESTS=On
+        run: >
+          make.bat -G "Visual Studio 16 2019" -A x64 
+                   -DCMAKE_VS_GLOBALS="CLToolExe=clcache.exe;TrackFileAccess=false" 
+                   -DCOSMOSCOUT_UNIT_TESTS=On
       - name: Run Tests
         shell: cmd
         run: install\\windows-release\\bin\\run_tests.bat
