--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -86,22 +86,20 @@ jobs:
           restore-keys: gcc-
       - name: Download Dependencies
         run: |
-          sudo add-apt-repository ppa:mhier/libboost-latest
           sudo apt-get update -q
           sudo apt-get install libc++-dev libgl1-mesa-dev libglu1-mesa-dev libx11-dev
-          sudo apt-get install libxi-dev libgconf-2-4 libboost1.70-dev ccache lcov xvfb
+          sudo apt-get install libxi-dev libgconf-2-4 ccache lcov xvfb
           ccache --max-size 1G
           ccache -z
       - name: Build Externals
         run: >
           ./make_externals.sh -G "Unix Makefiles" 
-                              -DCMAKE_CXX_COMPILER_LAUNCHER=ccache 
-                              -DCMAKE_C_COMPILER_LAUNCHER=ccache
+          -DCMAKE_CXX_COMPILER_LAUNCHER=ccache -DCMAKE_C_COMPILER_LAUNCHER=ccache
       - name: Build CosmoScout VR
         run: >
           ./make.sh -G "Unix Makefiles" 
-                    -DCMAKE_CXX_COMPILER_LAUNCHER=ccache -DCMAKE_C_COMPILER_LAUNCHER=ccache 
-                    -DCOSMOSCOUT_COVERAGE_INFO=On -DCOSMOSCOUT_UNIT_TESTS=On
+          -DCMAKE_CXX_COMPILER_LAUNCHER=ccache -DCMAKE_C_COMPILER_LAUNCHER=ccache 
+          -DCOSMOSCOUT_COVERAGE_INFO=On -DCOSMOSCOUT_UNIT_TESTS=On
       - name: Run Tests
         run: ./install/linux-release/bin/run_tests.sh
       - name: Run Graphical Tests
@@ -144,22 +142,20 @@ jobs:
           restore-keys: clang-
       - name: Download Dependencies
         run: |
-          sudo add-apt-repository ppa:mhier/libboost-latest
           sudo apt-get update -q
           sudo apt-get install libc++-dev libgl1-mesa-dev libglu1-mesa-dev libx11-dev
-          sudo apt-get install libxi-dev libgconf-2-4 libboost1.70-dev ccache
+          sudo apt-get install libxi-dev libgconf-2-4 ccache
           ccache --max-size 1G
           ccache -z
       - name: Build Externals
         run: >
           ./make_externals.sh -G "Unix Makefiles" 
-                              -DCMAKE_CXX_COMPILER_LAUNCHER=ccache 
-                              -DCMAKE_C_COMPILER_LAUNCHER=ccache
+          -DCMAKE_CXX_COMPILER_LAUNCHER=ccache -DCMAKE_C_COMPILER_LAUNCHER=ccache
       - name: Build CosmoScout VR
         run: >
           ./make.sh -G "Unix Makefiles" 
-                    -DCMAKE_CXX_COMPILER_LAUNCHER=ccache -DCMAKE_C_COMPILER_LAUNCHER=ccache 
-                    -DCOSMOSCOUT_UNIT_TESTS=On
+          -DCMAKE_CXX_COMPILER_LAUNCHER=ccache -DCMAKE_C_COMPILER_LAUNCHER=ccache 
+          -DCOSMOSCOUT_UNIT_TESTS=On
       - name: Run Tests
         run: ./install/linux-release/bin/run_tests.sh
       - name: Run Graphical Tests
@@ -199,13 +195,13 @@ jobs:
         shell: cmd
         run: >
           make_externals.bat -G "Visual Studio 16 2019" -A x64 
-                             -DCMAKE_VS_GLOBALS="CLToolExe=clcache.exe;TrackFileAccess=false"
+          -DCMAKE_VS_GLOBALS="CLToolExe=clcache.exe;TrackFileAccess=false"
       - name: Build CosmoScout VR
         shell: cmd
         run: >
           make.bat -G "Visual Studio 16 2019" -A x64 
-                   -DCMAKE_VS_GLOBALS="CLToolExe=clcache.exe;TrackFileAccess=false" 
-                   -DCOSMOSCOUT_UNIT_TESTS=On -DBOOST_ROOT=%BOOST_ROOT_1_72_0%
+          -DCMAKE_VS_GLOBALS="CLToolExe=clcache.exe;TrackFileAccess=false" 
+          -DCOSMOSCOUT_UNIT_TESTS=On -DBOOST_ROOT=%BOOST_ROOT_1_72_0%
       - name: Run Tests
         shell: cmd
         run: install\\windows-release\\bin\\run_tests.bat
