--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,11 +35,9 @@ jobs:
       run: git submodule update --init
     - name: Download Dependencies
       run: |
-        sudo add-apt-repository ppa:mhier/libboost-latest
         sudo apt-get update -q
         sudo apt-get install libc++-dev libgl1-mesa-dev libglu1-mesa-dev libx11-dev
-        sudo apt-get install libxi-dev libgconf-2-4 libboost1.70-dev
-        sudo pip install cmake==3.13.3
+        sudo apt-get install libxi-dev libgconf-2-4
     - name: Build Externals
       run: ./make_externals.sh
     - name: Build CosmoScout VR
@@ -60,8 +58,6 @@ jobs:
   release_windows:
     name: Windows
     runs-on: windows-2016
-    env:
-      BOOST_ROOT: $BOOST_ROOT_1_69_0
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v2
@@ -69,10 +65,10 @@ jobs:
       run: git submodule update --init
     - name: Build Externals
       shell: cmd
-      run: make_externals.bat
+      run: make_externals.bat -G "Visual Studio 16 2019" -A x64 
     - name: Build CosmoScout VR
       shell: cmd
-      run: make.bat
+      run: make.bat -G "Visual Studio 16 2019" -A x64 -DBOOST_ROOT=%BOOST_ROOT_1_72_0%
     - name: Create Release
       run: | 
         move install\windows-release cosmoscout-vr
