--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "plugins/csp-atmospheres"]
 	path = plugins/csp-atmospheres
 	url = ../../cosmoscout/csp-atmospheres.git
+[submodule "externals/vrpn"]
+	path = externals/vrpn
+	url = https://github.com/vrpn/vrpn.git
