--- a/config/base/vista/interaction.ini
+++ b/config/base/vista/interaction.ini
@@ -5,7 +5,7 @@
 [SYSTEM]
 DRIVERPLUGINDIRS    = ${VISTACORELIBS_DRIVER_PLUGIN_DIRS}
 DEVICEDRIVERS       = KEYBOARD, MOUSE, SPACENAVIGATOR, XBOXCONTROLLER
-INTERACTIONCONTEXTS = KEYINPUT, MOUSEINPUT, MOUSEZOOM, MOUSEPAN, SPACENAVIGATION, KEYBOARDNAVIGATION, VRPNCONTROLLERINPUT, VRPNCONTROLLERNAVIGATION
+INTERACTIONCONTEXTS = KEYINPUT, MOUSEINPUT, MOUSEZOOM, MOUSEPAN, SPACENAVIGATION, KEYBOARDNAVIGATION, VRPNCONTROLLERINPUT, VRPNCONTROLLERNAVIGATION, MOUSECONTROLLERSELECTOR
 DUMPDFNGRAPHS       = TRUE
 
 
@@ -46,6 +46,10 @@ GRAPH               = xml/gamepad_standardinput.xml
 [VRPNCONTROLLERNAVIGATION]
 ROLE                = VRPN_CONTROLLER_NAVIGATION
 GRAPH               = xml/gamepad_navigation.xml
+
+[MOUSECONTROLLERSELECTOR]
+ROLE                = MOUSE_CONTROLLER_NEGOTIATOR
+GRAPH               = xml/3dmouse_negotiator.xml
 
 ######################## device drivers ###############################
 
