--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -98,7 +98,7 @@ jobs:
         run: >
           ./make_externals.sh -G "Unix Makefiles"
           -DCMAKE_CXX_COMPILER_LAUNCHER=ccache -DCMAKE_C_COMPILER_LAUNCHER=ccache
-          -DBOOST_ROOT=$BOOST_ROOT_1_69_0
+          -DBOOST_ROOT=$BOOST_ROOT_1_69_0 -DBoost_ARCHITECTURE=-x64
       - name: Build CosmoScout VR
         env: # We reenable these options to test them, since they are not tested regularly by developers.
           COSMOSCOUT_USE_PCH: true
