--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,18 @@
 [submodule "externals/zlib"]
 	path = externals/zlib
 	url = https://github.com/madler/zlib.git
+[submodule "externals/ospray"]
+	path = externals/ospray
+	url = https://github.com/ospray/ospray.git
+[submodule "externals/embree"]
+	path = externals/embree
+	url = https://github.com/embree/embree.git
+[submodule "externals/openvkl"]
+	path = externals/openvkl
+	url = https://github.com/openvkl/openvkl.git
+[submodule "externals/oidn"]
+	path = externals/oidn
+	url = https://github.com/OpenImageDenoise/oidn.git
+[submodule "externals/rkcommon"]
+	path = externals/rkcommon
+	url = https://github.com/ospray/rkcommon.git
