--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,7 +77,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
       - name: Checkout Submodules
-        run: git submodule update --init
+        run: git submodule update --init --recursive
       - name: Cache Object Files
         uses: actions/cache@v1.1.0
         with:
@@ -149,7 +149,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
       - name: Checkout Submodules
-        run: git submodule update --init
+        run: git submodule update --init --recursive
       - name: Cache Object Files
         uses: actions/cache@v1.1.0
         with:
@@ -207,7 +207,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
       - name: Checkout Submodules
-        run: git submodule update --init
+        run: git submodule update --init --recursive
       - name: Cache Object Files
         uses: actions/cache@v1.1.0
         with:
