--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -98,7 +98,7 @@ jobs:
         run: >
           ./make_externals.sh -G "Unix Makefiles"
           -DCMAKE_CXX_COMPILER_LAUNCHER=ccache -DCMAKE_C_COMPILER_LAUNCHER=ccache
-          -DBOOST_ROOT=$BOOST_ROOT_1_69_0 -DBoost_ARCHITECTURE=-x64
+          -DBOOST_ROOT=$BOOST_ROOT_1_72_0 -DBoost_ARCHITECTURE=-x64
       - name: Build CosmoScout VR
         env: # We reenable these options to test them, since they are not tested regularly by developers.
           COSMOSCOUT_USE_PCH: true
@@ -170,6 +170,7 @@ jobs:
         run: >
           ./make_externals.sh -G "Unix Makefiles"
           -DCMAKE_CXX_COMPILER_LAUNCHER=ccache -DCMAKE_C_COMPILER_LAUNCHER=ccache
+          -DBOOST_ROOT=$BOOST_ROOT_1_72_0 -DBoost_ARCHITECTURE=-x64
       - name: Build CosmoScout VR
         env: # We reenable these options to test them, since they are not tested regularly by developers.
           COSMOSCOUT_USE_PCH: true
@@ -224,6 +225,7 @@ jobs:
         run: >
           make_externals.bat -G "Visual Studio 16 2019" -A x64
           -DCMAKE_VS_GLOBALS="CLToolExe=clcache.exe;TrackFileAccess=false"
+          -DBOOST_ROOT=%BOOST_ROOT_1_72_0%
       - name: Build CosmoScout VR
         shell: cmd
         run: >
