--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -96,7 +96,7 @@ jobs:
           COSMOSCOUT_USE_PCH: false
           COSMOSCOUT_USE_UNITY_BUILD: false
         run: >
-          ./make_externals.sh -G "Unix Makefiles"
+          cd /mnt && /home/runner/work/cosmoscout-vr/cosmoscout-vr/make_externals.sh -G "Unix Makefiles"
           -DCMAKE_CXX_COMPILER_LAUNCHER=ccache -DCMAKE_C_COMPILER_LAUNCHER=ccache
           -DBOOST_ROOT=$BOOST_ROOT_1_72_0 -DBoost_ARCHITECTURE=-x64
       - name: Build CosmoScout VR
